--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INC</title>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
+
 <body>
-    Under development
-    
+    <section class="hero">
+        <header class="header">
+            <div class="row">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                    COLUMN 1
+                </div>
+                <div class="col-xl-9 col-lg-9 col-md-9 col-sm-0 col-xs-0">
+                    COLUMN 2
+                </div>
+            </div>
+            <div class="hamburger">
+                <button onclick="hamburgerToggle()" class="hamburger_button">
+                    <i class="fa fa-bars"></i>
+                </button>
+            </div>
+            <div class="hamburger_mobile_menu" id="hamburger_mobile_menu">
+                <a href="index.html">Home</a> <br>
+                <a href="about.html">About Us</a> <br>
+                <a href="services.html">Services</a> <br>
+                <a href="">Blogs</a> <br>
+                <a href="contact.html">Contact Us</a> <br>
+            </div>
+        </header>
+        <script>
+            
+        </script>
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+
+
+
+    <script src="js/main.js"></script>
 </body>
+
 </html>
