--- a/index.html
+++ b/index.html
@@ -12,20 +12,50 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- fontawesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Font Awesome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Jomhuria&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <section class="hero">
         <header class="header">
-            <div class="row">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                    COLUMN 1
+            <div style="margin: 0;" class="row">
+                <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
+                    <img src="img/inc_nav_logo.png" alt="">
                 </div>
-                <div class="col-xl-9 col-lg-9 col-md-9 col-sm-0 col-xs-0">
-                    COLUMN 2
+
+                <!-- NAVBAR FOR DESKTOP -->
+                <div style="padding: 0;" class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-xs-0 nav_navbar_col">
+                    <div class="navbar_container">
+                        <div class="nav_item nav_active">
+                            <a href="index.html">Home</a>
+                        </div>
+                        <div class="nav_item ">
+                            <a href="about.html">About Us</a>
+                        </div>
+                        <div class="nav_item ">
+                            <a href="services.html">Services</a>
+                        </div>
+                        <div class="nav_item ">
+                            <a href="">Blogs</a>
+                        </div>
+                        <div class="nav_item ">
+                            <a href="contact.html">Contact Us</a>
+                        </div>
+                    </div>
+                </div>
+                <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_social_col">
+                    <div class="nav_social_container">
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="hamburger">
@@ -33,6 +63,8 @@
                     <i class="fa fa-bars"></i>
                 </button>
             </div>
+
+            <!-- MOBILE MENU -->
             <div class="hamburger_mobile_menu" id="hamburger_mobile_menu">
                 <a href="index.html">Home</a> <br>
                 <a href="about.html">About Us</a> <br>
@@ -41,12 +73,63 @@
                 <a href="contact.html">Contact Us</a> <br>
             </div>
         </header>
-        <script>
-            
-        </script>
+
+        <div class="hero-content">
+            <div class="hero_content_wrap">
+                <h1>Welcome <br>To INC Shipping LLC</h1>
+                <p>The International Freight Forwarders</p>
+                <button class="quote-button">Get a Free Quote</button>
+            </div>
+
+            <div class="container-image">
+                <img src="img/container.png" alt="Hanging Container">
+            </div>
+        </div>
 
     </section>
 
+
+    <section class="home_about">
+        <div class="about_banner_wrap">
+            <div class="about_banner">
+                <h2>About Us</h2>
+                <h3>INC Express Shipping LLC - Your Bridgeway With The World</h3>
+                <p>At INC Express, we mobilise your cargo and give a boost to your business with accuracy and speed.
+                    Being one of the reliable logistics, transport and warehousing company in UAE, we assure our clients
+                    with exquisite personalised services to enhance their satisfaction. Our quality-oriented logistics
+                    services, make sure that your consignment stays and reaches safely to you. With a magnificent global
+                    stretch, we cater to your transportation with utmost precision. </p>
+            </div>
+        </div>
+        <div class="about_sticker">
+            <img src="img/Group 321.png" alt="">
+            <img src="img/Group 322.png" alt="">
+            <img src="img/Group 323.png" alt="">
+        </div>
+        <div class="about_sticker_text">
+            <div class="about_sticker_text_item">
+                <h4>Reliability</h4>
+                <p>
+                    At INC Express Shipping LLC, our services comprise astounding work of responsibility and hence our
+                    clients stay relied on our exclusive services.
+                </p>
+            </div>
+            <div class="about_sticker_text_item">
+                <h4>Trust</h4>
+                <p>
+                    We make sure that we build an honest relationship with our clients, which is why we develop trust in
+                    our logistics services and support.
+                </p>
+            </div>
+            <div class="about_sticker_text_item">
+                <h4>Satisfaction</h4>
+                <p>
+                    Our agenda is to proffer satisfaction among our clients and that's why we make sure that all our
+                    services undergo precise quality check and adhere to all the international guidelines.
+                </p>
+            </div>
+        </div>
+    </section>
 
 
 
