--- a/index.html
+++ b/index.html
@@ -106,22 +106,22 @@
             <img src="img/Group 322.png" alt="">
             <img src="img/Group 323.png" alt="">
         </div>
-        <div class="about_sticker_text">
-            <div class="about_sticker_text_item">
+        <div class="about_sticker_text row">
+            <div class="about_sticker_text_item col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <h4>Reliability</h4>
                 <p>
                     At INC Express Shipping LLC, our services comprise astounding work of responsibility and hence our
                     clients stay relied on our exclusive services.
                 </p>
             </div>
-            <div class="about_sticker_text_item">
+            <div class="about_sticker_text_item col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <h4>Trust</h4>
                 <p>
                     We make sure that we build an honest relationship with our clients, which is why we develop trust in
                     our logistics services and support.
                 </p>
             </div>
-            <div class="about_sticker_text_item">
+            <div class="about_sticker_text_item col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <h4>Satisfaction</h4>
                 <p>
                     Our agenda is to proffer satisfaction among our clients and that's why we make sure that all our
@@ -129,6 +129,83 @@
                 </p>
             </div>
         </div>
+        <div class="about_bottom_banner">
+            <img src="img/Group 310.png" alt="">
+        </div>
+    </section>
+
+    <section class="home_achivements">
+        <div class="achivements_wrapper"></div>
+        <div class="achivements_content">
+            <h2>Our Achievements</h2>
+            <div class="row achivements_content_counter">
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-0 col-xs-0"></div>
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-0 col-xs-0"></div>
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
+                    <p>Suppliers</p>
+                    <h2>150+</h2>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
+                    <p>Clients</p>
+                    <h2>200+</h2>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
+                    <p>Countries</p>
+                    <h2>100+</h2>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
+                    <p>Satisfaction</p>
+                    <h2>100%</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="home_services">
+        <div class="home_services_heading">
+            Our Services
+        </div>
+        <div class="home_services_icons">
+            <div class="row ">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                    <img src="img/home_serv_icon1.png" alt="">
+                    Air Freight
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                    <img src="img/home_serv_icon2.png" alt="">
+                    Sea Freight
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                    <img src="img/home_serv_icon3.png" alt="">
+                    Road Freight
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                    <img src="img/home_serv_icon4.png" alt="">
+                    Customs Clearance
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                    <img src="img/home_serv_icon1.png" alt="">
+                    Air Freight
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                    <img src="img/home_serv_icon2.png" alt="">
+                    Sea Freight
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                    <img src="img/home_serv_icon3.png" alt="">
+                    Road Freight
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                    <img src="img/home_serv_icon4.png" alt="">
+                    Customs Clearance
+                </div>
+            </div>
+        </div>
+        <button>
+            Show More
+        </button>
     </section>
 
 
