--- a/index.html
+++ b/index.html
@@ -167,39 +167,39 @@
         </div>
         <div class="home_services_icons">
             <div class="row ">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item">
                     <img src="img/home_serv_icon1.png" alt="">
                     Air Freight
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item">
                     <img src="img/home_serv_icon2.png" alt="">
                     Sea Freight
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item">
                     <img src="img/home_serv_icon3.png" alt="">
                     Road Freight
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item">
                     <img src="img/home_serv_icon4.png" alt="">
                     Customs Clearance
                 </div>
             </div>
             <div class="row ">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
-                    <img src="img/home_serv_icon1.png" alt="">
-                    Air Freight
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item">
+                    <img src="img/home_serv_icon5.png" alt="">
+                    Temp. Controlled Cargo
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
-                    <img src="img/home_serv_icon2.png" alt="">
-                    Sea Freight
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item">
+                    <img src="img/home_serv_icon6.png" alt="">
+                    Warehousing
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
-                    <img src="img/home_serv_icon3.png" alt="">
-                    Road Freight
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item">
+                    <img src="img/home_serv_icon7.png" alt="">
+                    Cross Trade
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 home_services_item">
-                    <img src="img/home_serv_icon4.png" alt="">
-                    Customs Clearance
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item">
+                    <img src="img/home_serv_icon8.png" alt="">
+                    Project Cargo
                 </div>
             </div>
         </div>
@@ -207,6 +207,58 @@
             Show More
         </button>
     </section>
+
+
+    <section class="home_video">
+
+    </section>
+
+
+    <section class="home_contact">
+        <div class="home_contact_head">
+            <h2 class="gradient-text">Leave A Message For Us</h2>
+        </div>
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-0 home_contact_col1">
+                <div class="home_contact_image">
+                    <img src="img/forklift.png" alt="">
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 home_contact_col2">
+                <div class="home_contact_form_container">
+                    <div class="contact_form">
+                        <h2>Get a Free Quote</h2>
+                        <p>Kindly, fill out the form given below and we will contact you.</p>
+                        <form action="">
+                            <div class="cfif">
+                                <input type="text" id="companyName" name="companyName" placeholder="Company Name">
+                                <input type="text" id="name" name="name" placeholder="Your Name">
+                            </div>
+                            <div class="cfif">
+                                <input type="text" id="phone" name="phone" placeholder="Contact Number">
+                                <input type="text" id="email" name="email" placeholder="Email">
+                            </div>
+                            <div class="cfif">
+                                <input type="text" id="deptCity" name="deptCity" placeholder="City of Departure">
+                                <input type="text" id="delCity" name="delCity" placeholder="Delivery City">
+                            </div>
+                            <textarea rows="4" name="message" id="message" placeholder="Your Message"></textarea>
+                            <button>SEND</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+
+
+
+
+
+
 
 
 
