--- a/index.html
+++ b/index.html
@@ -210,7 +210,10 @@
 
 
     <section class="home_video">
-
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/D0UnqGm_miA?si=ZerEDKC17Fm3hAy6"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 
 
@@ -218,7 +221,7 @@
         <div class="home_contact_head">
             <h2 class="gradient-text">Leave A Message For Us</h2>
         </div>
-        <div class="row">
+        <div style="padding-bottom: 50px;" class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-0 home_contact_col1">
                 <div class="home_contact_image">
                     <img src="img/forklift.png" alt="">
@@ -248,9 +251,82 @@
                     </div>
                 </div>
             </div>
-
         </div>
+        <div class="row contact_details_bar">
+            <div style="padding: 0;" class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12">
+                <div class="contact_details_polygon">
+                    <span class="contact_details_polygon_b">
+                        <div class="row contact_detail_row">
+                            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 contact_detail">
+                                <i class="fa-solid fa-headset"></i>
+                                <div class="contact_detail_content">
+                                    <h4>Call Us</h4>
+                                    <a href="">+971 43233480</a>
+                                    <a href="">+971 503524424</a>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 contact_detail">
+                                <i class="fa-solid fa-envelope-open-text"></i>
+                                <div class="contact_detail_content">
+                                    <h4>Mail Us</h4>
+                                    <a href="">sales@incshipping.com</a>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 contact_detail">
+                                <i class="fa-solid fa-map-location-dot"></i>
+                                <div class="contact_detail_content">
+                                    <h4>Location</h4>
+                                    <a href="">Office M29, Freight gate 4 Dubai
+                                        Airport Freezone Dubai, UAE</a>
+                                </div>
+                            </div>
+                        </div>
+                    </span>
+                </div>
+            </div>
+            <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
+                <div class="contact_dubai_logos">
+                    <img src="img/emirates-png-150x150.png.png" alt="">
+                    <img src="img/2020png-150x150.png.png" alt="">
+                </div>
+            </div>
+        </div>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8582.044649328185!2d55.36092295274745!3d25.26031366102371!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f5d0126c02d07%3A0xb59a86433d239bd8!2sINC%20Express%20Shipping%20LLC!5e0!3m2!1sen!2sin!4v1717224716083!5m2!1sen!2sin"
+            width="100%" height="300vh" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
+
+    <footer>
+        <div class="row">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                <div class="footer_logo_container">
+                    <img src="img/inc_nav_logo.png" alt="">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
+                        in Dubai</p>
+                </div>
+            </div>
+            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
+                <div class="row">
+                    <div style="padding: 0 !important;" class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                        <div class="footer_link_heading">
+                            <h4>QUICK LINKS</h4>
+                        </div>
+                    </div>
+                    <div style="padding: 0 !important;" class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                        <div class="footer_link_heading">
+                            <h4>OUR SERVICES</h4>
+                        </div>
+                    </div>
+                    <div style="padding: 0 !important;" class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                        <div class="footer_link_heading">
+                            <h4>ADDRESS</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
