--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 </div>
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_social_col">
                     <div class="nav_social_container">
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/incexpressshipping/"><i class="fa-brands fa-instagram"></i></a>
+                        <a target="_blank" href="https://www.facebook.com/incshipping"><i class="fa-brands fa-facebook"></i></a>
+                        <a target="_blank" href="https://www.linkedin.com/company/inc-express-shipping-l-l-c/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -261,22 +261,22 @@
                                 <i class="fa-solid fa-headset"></i>
                                 <div class="contact_detail_content">
                                     <h4>Call Us</h4>
-                                    <a href="">+971 43233480</a>
-                                    <a href="">+971 503524424</a>
+                                    <a href="tel:+97143233480">+971 43233480</a>
+                                    <a href="tel:+971503524424">+971 503524424</a>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 contact_detail">
                                 <i class="fa-solid fa-envelope-open-text"></i>
                                 <div class="contact_detail_content">
                                     <h4>Mail Us</h4>
-                                    <a href="">sales@incshipping.com</a>
+                                    <a href="mailto:sales@incshipping.com">sales@incshipping.com</a>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 contact_detail">
                                 <i class="fa-solid fa-map-location-dot"></i>
                                 <div class="contact_detail_content">
                                     <h4>Location</h4>
-                                    <a href="">Office M29, Freight gate 4 Dubai
+                                    <a href="contact.html">Office M29, Freight gate 4 Dubai
                                         Airport Freezone Dubai, UAE</a>
                                 </div>
                             </div>
@@ -312,21 +312,65 @@
                         <div class="footer_link_heading">
                             <h4>QUICK LINKS</h4>
                         </div>
+                        <div class="footer_links">
+                            <a href="index.html">Home</a>
+                            <a href="about.html">About Us</a>
+                            <a href="services.html">Services</a>
+                            <a href="">Blogs</a>
+                            <a href="contact.html">Contact Us</a>
+                        </div>
                     </div>
                     <div style="padding: 0 !important;" class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                         <div class="footer_link_heading">
                             <h4>OUR SERVICES</h4>
+                        </div>
+                        <div class="footer_links">
+                            <a href="services/air-freight.html">Air Freight</a>
+                            <a href="services/sea-freight.html">Sea Freight</a>
+                            <a href="services/road-freight.html">Road Freight</a>
+                            <a href="services/customs-clearance.html">Customs Clearance</a>
+                            <a href="services/temprature-controlled-cargo.html">Temp. Controlled Cargo</a>
+                            <a href="services/warehousing.html">Warehousing</a>
+                            <a href="services/cross-trade.html">Cross Trade</a>
+                            <a href="services/project-cargo.html">Project Cargo</a>
                         </div>
                     </div>
                     <div style="padding: 0 !important;" class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                         <div class="footer_link_heading">
                             <h4>ADDRESS</h4>
                         </div>
+                        <div class="footer_links">
+                            <a href="">Office M29, Freight gate 4 Dubai
+                                Airport Freezone Dubai, UAE</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        
+        <div class="row">
+            <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-12 footer_social_line">
+                <div class="white_horizontal_line"></div>
+            </div>
+            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
+                <div class="footer_sociall_icons">
+                    <a target="_blank" href="https://www.facebook.com/incshipping"><i
+                            class="fa-brands fa-facebook"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/incexpressshipping/"><i
+                            class="fa-brands fa-instagram"></i></a>
+                    <a target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a target="_blank" href=""><i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
+                <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="">Privacy Policy</a> | <a
+                        href="">Terms of Service</a></p>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
+                <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a></p>
+            </div>
+        </div>
     </footer>
 
 
