--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
                 <div class="row">
-                    <div style="padding: 0 !important;" class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_quick_links">
                         <div class="footer_link_heading">
                             <h4>QUICK LINKS</h4>
                         </div>
@@ -320,7 +320,7 @@
                             <a href="contact.html">Contact Us</a>
                         </div>
                     </div>
-                    <div style="padding: 0 !important;" class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_quick_links">
                         <div class="footer_link_heading">
                             <h4>OUR SERVICES</h4>
                         </div>
@@ -335,7 +335,7 @@
                             <a href="services/project-cargo.html">Project Cargo</a>
                         </div>
                     </div>
-                    <div style="padding: 0 !important;" class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_quick_links">
                         <div class="footer_link_heading">
                             <h4>ADDRESS</h4>
                         </div>
