--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="hero_content_wrap">
                 <h1 id="typed-text">Welcome <br>To INC Shipping LLC</h1>
                 <p>The International Freight Forwarders</p>
-                <button class="quote-button">Get a Free Quote</button>
+                <button onclick="window.location.href='contact.html'" class="quote-button">Get a Free Quote</button>
             </div>
 
             <div class="container-image">
@@ -208,7 +208,7 @@
                 </div>
             </div>
         </div>
-        <button>
+        <button onclick="window.location.href='services.html'">
             Show More
         </button>
     </section>
