--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC</title>
+    <title>INC-Home</title>
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
 
@@ -31,7 +31,8 @@
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
-                <div style="padding: 0;" class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-xs-0 nav_navbar_col animate fadeInDown">
+                <div style="padding: 0;"
+                    class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-xs-0 nav_navbar_col animate fadeInDown">
                     <div class="navbar_container">
                         <div class="nav_item nav_active">
                             <a href="index.html">Home</a>
@@ -163,7 +164,7 @@
         </div>
     </section>
 
-    
+
 
 
     <section class="home_services">
@@ -172,37 +173,53 @@
         </div>
         <div class="home_services_icons">
             <div class="row ">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
+                <div onclick="window.location.href='air-freight.html'"
+                    class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
+                    <div class="dot"></div>
                     <img src="img/home_serv_icon1.png" alt="">
                     Air Freight
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
+                <div onclick="window.location.href='sea-freight.html'"
+                    class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
+                    <div class="dot"></div>
                     <img src="img/home_serv_icon2.png" alt="">
                     Sea Freight
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
+                <div onclick="window.location.href='road-freight.html'"
+                    class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
+                    <div class="dot"></div>
                     <img src="img/home_serv_icon3.png" alt="">
                     Road Freight
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
+                <div onclick="window.location.href='customs-clearance.html'"
+                    class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
+                    <div class="dot"></div>
                     <img src="img/home_serv_icon4.png" alt="">
                     Customs Clearance
                 </div>
             </div>
             <div class="row ">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
+                <div onclick="window.location.href='temprature-controlled-cargo.html'"
+                    class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
+                    <div class="dot"></div>
                     <img src="img/home_serv_icon5.png" alt="">
                     Temp. Controlled Cargo
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
+                <div onclick="window.location.href='warehousing.html'"
+                    class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
+                    <div class="dot"></div>
                     <img src="img/home_serv_icon6.png" alt="">
                     Warehousing
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
+                <div onclick="window.location.href='cross-trade.html'"
+                    class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
+                    <div class="dot"></div>
                     <img src="img/home_serv_icon7.png" alt="">
                     Cross Trade
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
+                <div onclick="window.location.href='project-cargo.html'"
+                    class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
+                    <div class="dot"></div>
                     <img src="img/home_serv_icon8.png" alt="">
                     Project Cargo
                 </div>
@@ -330,14 +347,14 @@
                             <h4>OUR SERVICES</h4>
                         </div>
                         <div class="footer_links">
-                            <a href="services/air-freight.html">Air Freight</a>
-                            <a href="services/sea-freight.html">Sea Freight</a>
-                            <a href="services/road-freight.html">Road Freight</a>
-                            <a href="services/customs-clearance.html">Customs Clearance</a>
-                            <a href="services/temprature-controlled-cargo.html">Temp. Controlled Cargo</a>
-                            <a href="services/warehousing.html">Warehousing</a>
-                            <a href="services/cross-trade.html">Cross Trade</a>
-                            <a href="services/project-cargo.html">Project Cargo</a>
+                            <a href="air-freight.html">Air Freight</a>
+                            <a href="sea-freight.html">Sea Freight</a>
+                            <a href="road-freight.html">Road Freight</a>
+                            <a href="customs-clearance.html">Customs Clearance</a>
+                            <a href="temprature-controlled-cargo.html">Temp. Controlled Cargo</a>
+                            <a href="warehousing.html">Warehousing</a>
+                            <a href="cross-trade.html">Cross Trade</a>
+                            <a href="project-cargo.html">Project Cargo</a>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_quick_links">
