--- a/x.html
+++ b/x.html
@@ -1,87 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-    <div class="topnav">
-        <a href="#home" class="active">Logo</a>
-        <!-- Navigation links (hidden by default) -->
-        <div id="myLinks">
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
-        </div>
-        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
-    </div>
+  <div class="face">
+    <p class="v-index">II</p>
+    <p class="h-index">II</p>
+    <div class="hand hour"></div>
+    <div class="hand minute"></div>
+    <div class="hand second"></div>
+</div>
 
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myLinks");
-            if (x.style.display === "block") {
-                x.style.display = "none";
-            } else {
-                x.style.display = "block";
-            }
-        }
-    </script>
+  <style>
+.face {
+  position: relative;
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  outline: 10px solid #333;
+  background: repeating-radial-gradient(circle at 50% 50%, 
+  rgba(200,200,200,.2) 0%, rgba(200,200,200,.2) 2%, 
+  transparent 2%, transparent 3%, rgba(200,200,200,.2) 3%, 
+  transparent 3%), conic-gradient(white 0%, silver 10%, 
+  white 35%, silver 45%, white 60%, silver 70%, 
+  white 80%, silver 95%, white 100%);
+  box-shadow: inset 0 0 20px #0007;
+}
 
-    <style>
-        
+.hand {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform-origin: 50% 100%;
+  transform: rotate(90deg); /* Offset initial position by 90 degrees */
+}
 
-/* Style the navigation menu */
-.topnav {
-    overflow: hidden;
-    background-color: #333;
-    position: relative;
-    height: max-content;
-  }
+.hour {
+  width: 5px;
+  height: 45px;
+  background: #aaa;
+  border-radius: 3px 3px 1px 1px;
+  box-shadow: 0 0 5px #0005, inset 1.5px 3px 0px #333, inset -1.5px -3px 0px #333;
+  z-index: 1;
+}
+
+.minute {
+  width: 4px;
+  height: 65px;
+  background: #aaa;
+  border-radius: 3px 3px 1px 1px;
+  box-shadow: 0 0 5px #0005, inset 1.5px 3px 0px #333, inset -1.5px -3px 0px #333;
+  z-index: 2;
+}
+
+.second {
+  width: 2px;
+  height: 80px;
+  background: red;
+  border-radius: 2px;
+  z-index: 3;
+  box-shadow: 5px 0 2px rgba(128, 128, 128, 0.2);
+}
+
+.second::before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: red;
+  left: -4px;
+  top: -4px;
+  border-radius: 50%;
+  border: 1px solid #eee;
+}
+
+.v-index {
+  position: absolute;
+  color: #333;
+  font-size: 24px;
+  left: 83.5px;
+  top: -3px;
+  text-shadow: 0 157px 0 #333;
+  z-index: 1
+}
+
+.h-index {
+  position: absolute;
+  color: #333;
+  font-size: 24px;
+  top: 72px;
+  left: 5px;
+  transform: rotate(-90deg);
+  text-shadow: 0 158px 0 #333;
+  z-index: 1;
+}
+  </style>
+
+  <script>
+ function updateClock() {
+    const now = new Date();
+    const seconds = now.getSeconds();
+    const minutes = now.getMinutes();
+    const hours = now.getHours();
   
-  /* Hide the links inside the navigation menu (except for logo/home) */
-  .topnav #myLinks {
-    display: none;
-  }
+    const secondHand = document.querySelector('.second');
+    const minuteHand = document.querySelector('.minute');
+    const hourHand = document.querySelector('.hour');
   
-  /* Style navigation menu links */
-  .topnav a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-  }
+    const secondDegrees = ((seconds / 60) * 360) + 90;
+    const minuteDegrees = ((minutes / 60) * 360) + ((seconds / 60) * 6) + 90;
+    const hourDegrees = ((hours / 12) * 360) + ((minutes / 60) * 30) + 90;
   
-  /* Style the hamburger menu */
-  .topnav a.icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  
-  /* Add a grey background color on mouse-over */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Style the active link (or home/logo) */
-  .active {
-    background-color: #04AA6D;
-    color: white;
-  }
+    secondHand.style.transform = `rotate(${secondDegrees}deg)`;
+    minuteHand.style.transform = `rotate(${minuteDegrees}deg)`;
+    hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+}
 
+setInterval(updateClock, 1000);
+updateClock();
 
+  </script>
 
-
-    </style>
 </body>
+
 </html>
