--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,6 +22,7 @@
         href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Jomhuria&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 </head>
+
 <body>
     <section class="hero">
         <header class="header">
@@ -30,7 +32,8 @@
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
-                <div style="padding: 0;" class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-xs-0 nav_navbar_col animate fadeInDown">
+                <div style="padding: 0;"
+                    class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-xs-0 nav_navbar_col animate fadeInDown">
                     <div class="navbar_container">
                         <div class="nav_item">
                             <a href="index.html">Home</a>
@@ -76,15 +79,169 @@
             </div>
         </header>
 
-        <div class="hero-content">
-            <div class="hero_content_wrap">
-                <h1>About</h1>
-                <p>Home > About</p>
-                <button onclick="window.location.href='contact.html'" class="quote-button">Get a Free Quote</button>
+        <div class="about_hero-content">
+            <div class="about_hero_wrap">
+                <div class="about_hero_content_wrap">
+                    <h1>About</h1>
+                    <p>Home > About</p>
+                </div>
             </div>
+            <div class="about_hero_bottom_strip">
+                <div class="about_strip_item">
+                    <img src="img/plane.gif" alt="">
+                    <div class="about_stripline"></div>
+                    <h6>Quality Assurance</h6>
+                </div>
+                <div class="about_strip_item">
+                    <img src="img/plane.gif" alt="">
+                    <div class="about_stripline"></div>
+                    <h6>Dedicated Service</h6>
+                </div>
+                <div class="about_strip_item">
+                    <img src="img/plane.gif" alt="">
+                    <div class="about_stripline"></div>
+                    <h6>Satisfaction at Par</h6>
+                </div>
+            </div>
+        </div>
+    </section>
 
-            <div class="container-image">
-                <img src="img/container.png" alt="Hanging Container">
+    <section class="about_sec1">
+        <div class="row ">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-0 about_sec1_col1">
+                <img src="img/Group 371.png" alt="">
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 about_sec1_col2">
+                <div class="about_sec1_col2_txt">
+                    <h2>Secure courier for small & big packages</h2>
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
+                        in Dubai, offers exclusive services with astounding quality for our clients. We specialise in
+                        the complete range of logistics services that support timely and accurate fulfilment of deals.
+                        Our agenda is to develop smoothness in your international business.</p>
+                    <p>At INC Express, distances don't matter as we carry out the best practices that proffer diligent
+                        results. From customs clearance to cross-border trades, we are one-stop shipping company for all
+                        your transportation requirements.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="home_achivements">
+        <div class="achivements_wrapper"></div>
+        <div class="achivements_content">
+            <h2 class="animate fadeInUp">Our Achievements</h2>
+            <div class="row achivements_content_counter">
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-0 col-xs-0"></div>
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-0 col-xs-0"></div>
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
+                    <p>Suppliers</p>
+                    <h2 class="count" data-target="150">0+</h2>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
+                    <p>Clients</p>
+                    <h2 class="count" data-target="200">0+</h2>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
+                    <p>Countries</p>
+                    <h2 class="count" data-target="100">0+</h2>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-xs-6">
+                    <p>Satisfaction</p>
+                    <h2 class="count" data-target="100">0%</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="about_sec2">
+        <div class="row">
+            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 about_sec2_col">
+                <div class="about_sec2_card">
+                    <h4>
+                        WHAT WE DO
+                    </h4>
+                    <p>
+                        Situated in the Dubai Airport Free Zone area, INC Express is a potential freight, logistics and
+                        shipping company that holds a substantial stake in the transportation, warehousing and
+                        management company.
+                    </p>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 about_sec2_col">
+                <div class="about_sec2_card">
+                    <h4>
+                        OUR HISTORY
+                    </h4>
+                    <p>
+                        The company holds various records of exceptional performance and quality. From clients to
+                        reputed organisations, they attain appreciation at most.
+                    </p>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 about_sec2_col">
+                <div class="about_sec2_card">
+                    <h4>
+                        OUR MISSION
+                    </h4>
+                    <p>
+                        We aim at becoming one of the leading freight forwardings with exceptional International
+                        shipping services with top-notch quality.
+                    </p>
+                </div>
+            </div>
+            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 about_sec2_col">
+                <div class="about_sec2_card">
+                    <h4>
+                        OUR VISION
+                    </h4>
+                    <p>
+                        We visualise ourselves as one of the exclusive shipping company in Dubai that supports quality,
+                        trust and passions towards our business.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="affiliations">
+        <div class="row affiliations_wrap">
+            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 affiliations_col1">
+                <h2>Affliations </h2>
+                <p>Our exclusive helping hands in the market.</p>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 affiliations_col2">
+                <div class="affiliations_logos">
+                    <img src="img/freigth-net.png.png" alt="">
+                    <img src="img/c5c.png.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="why_us">
+        <div class="row why_us_wraper">
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
+
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
+
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
+
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
+
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
+
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
+
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
+
             </div>
         </div>
     </section>
@@ -137,4 +294,5 @@
     <script src="js/main.js"></script>
     <script src="js/animate.js"></script>
 </body>
+
 </html>
