--- a/about.html
+++ b/about.html
@@ -222,25 +222,31 @@
 
     <section class="why_us">
         <div class="row why_us_wraper">
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 why_us_head">
+                <h2>Why Us</h2>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 why_us_desc">
+                <p>Our network spans across the globe, allowing us to offer comprehensive cargo solutions to businesses
+                    of all sizes. Whether you're shipping locally or internationally, we have the resources and
+                    expertise to handle your logistics with ease.</p>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 why_us_card">
+                <img src="img/Group 119.png" alt="">
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 why_us_card">
+                <img src="img/Group 119.png" alt="">
 
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 why_us_card">
+                <img src="img/Group 119.png" alt="">
 
             </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 why_us_card">
+                <img src="img/Group 119.png" alt="">
 
             </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
-
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
-
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
-
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 why_us_card">
+                <img src="img/Group 119.png" alt="">
 
             </div>
         </div>
